--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,29 @@
 .main-heading{
-    color: rgb(235, 79, 8);
     text-align: center;
+}
+
+.main-heading, .sub-heading{
+    color: rgb(235, 79, 8);
 }
 
 .recipes-avail{
     color:rgb(0, 0, 0);
-    background-color: orange;
+    background-color: rgba(255, 165, 0, 0.38);
 }
 
 body{
     background-color: rgb(240, 213, 157);
+}
+
+a {
+    text-align: center;
+    text-decoration: none;
+    font-weight: 700;
+}
+
+.recipe-img{
+    height: 410px;
+    width: 800px;
+}
+
 }
