Add styles, logo and recipe img to index
Image of recipe book, and logo for the website has been added. Along with that, more styles have been added to the index file.

--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,16 @@ a {
 .recipes-avail-list-style.one, .recipes-avail-list-style.two{
     margin-bottom: 25px;
 }
+
+.logo{
+    height: auto;
+    width: 50px;
+    display: block;
+    margin: 0px auto;
+    
+}
+
+.recipes-list-image{
+    height:auto;
+    width: 100px;
+}
