--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,15 @@ a{
     display: block;
     border: 2px dotted red;
     height: 42px;
-    width: 166.8px;
+    width: 200px;
     text-align: center;
+    margin:auto;
 }
 
 .header{
     text-align: center;
 }
+
 
 .card{
     width : 40%;
@@ -31,8 +33,12 @@ a{
 }
 
 .recipe-list{
-    padding: 70px;
-    height: auto;
+    padding: 25% 0% 25%;
+}
+
+.recipe-list-one, .recipe-list-two, .recipe-list-three{
+    padding: 10px;
+    font-size: 15px;
 }
 
 .recipe-list-one, .recipe-list-two{
